Fix HTML encoding issues in privacy policy

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
     <h2>12. Contact Us</h2>
     <div class="contact">
         <p>If you have any questions or concerns about this Privacy Policy or our privacy practices, please contact us at:</p>
-        <p><strong>Email:</strong> support@backgroundremoverpro.com</p>
+        <p><strong>Email:</strong> deepneuralaidna@gmail.com</p>
         <p><strong>App:</strong> Background Remover Pro</p>
     </div>
 
@@ -126,3 +126,4 @@
     </p>
 </body>
 </html>
+
